--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: 100;
+  z-index: 1;
   width: 100vw;
   display: flex;
   justify-content: space-between;
