--- a/app/components/Link/Link.module.css
+++ b/app/components/Link/Link.module.css
@@ -1,5 +1,4 @@
 .link {
-  z-index: 1000;
   text-decoration: none;
   transition: color 100ms linear;
 }
